# src/movies/movies.controller.ts
@@ -1,13 +1,22 @@
 import moviesService from './movies.service';
-import { AuthRequestWith, RequestWith } from '../core/types/request_with';
-import { PaginationQuery } from '../core/dtos/inputs/pagination.query';
+import { AuthRequestWith, RequestWith } from '../core/types';
+import { PaginationQuery } from '../core/dtos/inputs';
 import { MovieIdParams } from './dtos/inputs/get_movie_detail.params';
 import { AppResult } from '../core/types/app_result';
 import reviewsService from '../reviews/reviews.service';
-import { EditMovieReviewBody } from '../reviews/dtos/edit_review.body';
-import { ReviewIdParams } from '../reviews/dtos/review_id.params';
-import { CreateMovieReviewBody } from '../reviews/dtos/create_movie_review.body';
+import { EditMovieReviewBody } from '../reviews/dtos/inputs/edit_review.body';
+import { ReviewIdParams } from '../reviews/dtos/inputs/review_id.params';
+import { CreateMovieReviewBody } from '../reviews/dtos/inputs/create_movie_review.body';
 import { HttpStatus } from '../core/constants';
+import commentsService from '../comments/comments.service';
+import { MoviesPaginationQuery } from './dtos/inputs/movies_pagination.query';
+
+async function movies(req: RequestWith<MoviesPaginationQuery>) {
+  const q = req.unwrap();
+  const movies = await moviesService.getMovies(q);
+
+  return AppResult.new({ body: movies });
+}
 
 async function getPopularMovies(req: RequestWith<PaginationQuery>) {
   const paginationInput = req.unwrap();
@@ -64,9 +73,27 @@ async function removeReview(req: AuthRequestWith<never, ReviewIdParams>) {
   await reviewsService.remove(userId, reviewId);
 }
 
+/**
+ * MOVIE REVIEW COMMENTS
+ */
+
+async function getMovieReviewComments(
+  req: RequestWith<PaginationQuery, ReviewIdParams>,
+) {
+  const query = req.unwrap();
+  const { reviewId } = req.unwrapParams();
+  const myComments = await commentsService.getReviewComments(reviewId, query);
+
+  return AppResult.new({
+    body: myComments,
+  });
+}
+
 export default {
+  movies,
   getPopularMovies,
   getMovieDetail,
+  getMovieReviewComments,
   writeReview,
   editReview,
   removeReview,
