# src/users/users.router.ts
@@ -9,6 +9,7 @@ import { UpdateMyPasswordBody } from './dtos/inputs/update_my_password.body';
 import { handleUploadAvatars } from '../core/middlewares/handle_upload_avatars';
 import { handleResponse } from '../core/middlewares';
 import { DeleteUserBody } from './dtos/inputs/delete_user.body';
+import { ReviewIdParams } from '../reviews/dtos/inputs/review_id.params';
 
 const usersRouter = Router();
 
@@ -94,10 +95,8 @@ usersRouter.delete(
  * TODO:
  * 현재 로그인 한 사용자가 최근 조회한 영화(movie detail) 목록 조회(Pagination)
  */
-//@ts-ignore
 usersRouter.get(
-  // TODO: query?
-  '/me/movies/recent',
+  '/me/movies/history',
   handle({
     authLevel: 'must',
     queryCls: PaginationQuery,
@@ -109,8 +108,14 @@ usersRouter.get(
  * TODO:
  * 현재 로그인 한 사용자의 favorite 영화 목록 조회(Pagination)
  */
-//@ts-ignore
-usersRouter.get('/me/movies/favorite');
+usersRouter.get(
+  '/me/movies/favorites',
+  handle({
+    authLevel: 'must',
+    queryCls: PaginationQuery,
+    controller: usersController.getMyFavoriteMovies,
+  }),
+);
 
 /**
  * USER REVIEW
@@ -132,12 +137,40 @@ usersRouter.get(
  * @description
  * 특정 사용자가 작성한 영화 리뷰 보기
  */
-// TODO: 정렬 추가
 usersRouter.get(
   '/:userId/movies/reviews',
   handle({
     queryCls: PaginationQuery,
     controller: usersController.getReviewOverviews,
+  }),
+);
+
+/**
+ * COMMENTS
+ */
+
+/**
+ * @description
+ * 내가 작성한 영화 리뷰에 대한 모든 댓글 보기
+ */
+usersRouter.get(
+  '/me/movies/reviews/comments',
+  handle({
+    queryCls: PaginationQuery,
+    controller: usersController.getMyReviewComments,
+  }),
+);
+
+/**
+ * @description
+ * 특정 영화 리뷰에 대한 댓글 보기
+ */
+usersRouter.get(
+  '/movies/reviews/:reviewId/comments',
+  handle({
+    queryCls: PaginationQuery,
+    paramsCls: ReviewIdParams,
+    controller: usersController.getMyReviewComments,
   }),
 );
 
